--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* ***** ----------------------------------------------- *****
-Theme Name: ByMattLee WP Starter Theme
-Theme URI: https://github.com/bymattlee/bymattlee-wp-starter-theme
-Description: A starter theme created by Matt Lee
-Tags: bymattlee starter files, matt lee, starter files, bymattlee
+Theme Name: Andrea Musso WP Starter Theme
+Theme URI: https://github.com/amusso01/am-wp-starter-theme
+Description: A starter theme created by Andrea Musso froked bymattlee
+Tags: andrea musso, starter files, am
 Version: 1.0.0
-Author: Matt Lee
-Author URI: http://www.bymattlee.com
+Author: andrea musso
+Author URI: https://github.com/amusso01
 Text Domain: bymattlee
 Domain Path: /languages
 License: MIT License
